# dockit

./: .env.example  .gitignore  README.md  USER_GUIDE.md  USER_GUIDE_WIN.md  config.example.yaml  deploy_log.txt  dockit.spec  pyproject.toml  render.yaml
.github/workflows/: build-windows.yml  build.yml  ci.yml  release.yml
scripts/: build-client.sh  build_installer.iss  gen_test_pdf.py  supabase-push.sh  verify.sh
server/: .signore  auth.py  billing.py  db.py  llm.py  main.py  metrics.py  pyproject.toml  requirements.txt  s.yaml
server/migrations/: 0001_init.sql
server/monitoring/: README.md  docker-compose.yml  prometheus.yml
server/scripts/: run-migration.sh
src/: run_dockit.py
src/dockit/: __init__.py  __main__.py  config_path.py  main.py
src/dockit/core/: __init__.py  classifier.py  extractor.py  organizer.py  prefilter.py  watcher.py
src/dockit/db/: __init__.py  db.py  models.py
src/dockit/tools/: __init__.py  deadlines.py  export.py  feedback.py
src/dockit/ui/: __init__.py  gui_settings.py  tray.py  views.py
supabase/: config.toml
supabase/migrations/: 20240309000000_init_users_usage.sql
tests/: conftest.py  test_classifier.py  test_db.py  test_e2e.py  test_export.py  test_extractor.py  test_feedback.py  test_organizer.py  test_prefilter.py  test_render_endpoint.py  test_views.py  test_watcher.py
tests/test_data/: test_judgement3.docx
